src/styles/_main.css
/* main
-------------------- */
html {
  font-size: 62.5%;
}
body {
  font-size: 16px;
  line-height: 28px;
  background-color: var(--main-color);
  color: var(--font-color);
  font-family: sans-serif;
  font-feature-settings: "palt" 1;
  letter-spacing: 0.04rem;
  margin: 0;
  padding: calc(var(--base-padding) * 3) var(--base-padding);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* element
-------------------- */
img,
iframe,
svg {
  max-height: 100%;
  max-width: 100%;
}
img,
svg {
  height: auto;
}
img {
  box-sizing: border-box;
}
a {
  color: var(--link-color);
  text-decoration: none;
  &:hover {
    color: var(--link-hover-color);
  }
}

/* container
-------------------- */
.global-header,
.content,
.global-footer {
  margin: 0 auto;
  max-width: var(--desktop-width);
}

/* header
-------------------- */
.global-header {
  .title,
  .description {
    margin: 0 0 calc(var(--base-margin) * 2);
  }
  .title {
    display: inline-block;
  }
}

/* title svg
-------------------- */
.animate {
  fill: none;
  stroke: var(--cool-color);
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 1;
}

/* content
-------------------- */
.content {
  margin-bottom: calc(var(--base-margin) * 2);
  time,
  .date {
    font-family: var(--mono-font-family);
    font-size: 95%;
  }
  > h1 {
    display: none;
  }
  h1 {
    font-size: 110%;
    margin: 0;
  }
  .body {
    text-align: justify;
    text-justify: inter-ideograph;
    padding-top: 2rem;
    h2 {
      font-size: 110%;
      margin: 3rem 0;
    }
    h3 {
      font-size: 100%;
      margin: 3rem 0;
    }
    hr {
      border-style: solid;
    }
    blockquote {
      border-left: 2px solid;
      font-style: italic;
      margin: var(--base-margin);
      padding-left: 0.5em;
    }
    img {
      background-color: #fff;
      border: 1px solid #ddd;
      border-radius: 2px;
      padding: 3px;
    }
    p {
      margin: 2rem 0;
    }
  }
  .posts {
    .year {
      font-size: 95%;
      font-family: var(--mono-font-family);
      font-weight: normal;
    }
    ul {
      list-style: none;
      margin: 0;
      padding: 0;
    }
    li {
      padding: 0.25em 0;
    }
  }
  .adsense {
    max-width: 100%;
    padding: var(--base-padding) 0;
    width: 300px;
  }
}

/* footer
-------------------- */
.global-footer {
  .copyright,
  address {
    display: inline-block;
  }
  .copyright {
    margin: 0;
  }
  address {
    font-style: normal;
  }
}

/* highlight
-------------------- */
.body {
  .astro-code {
    border: 1px solid #ddd;
    border-radius: var(--radius-out);
    margin: 0;
    padding: 0.5em 0.75em;
    code,
    & {
      font-size: 13px;
      line-height: 19.5px;
      font-family: var(--mono-font-family);
      letter-spacing: 0;
    }
  }
}

.flex-container {
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  flex-flow: row wrap;
  justify-content: flex-start;
  .flex-item {
    box-sizing: border-box;
    flex: auto;
    height: 50%;
    padding: var(--base-padding);
    width: 50%;
  }
}

